fixing image alignment issue on dashboard page

--- a/src/app/pages/dashboard/components/dashboard.css
+++ b/src/app/pages/dashboard/components/dashboard.css
@@ -26,3 +26,6 @@
 	width: 64px;
 	height: 64px;
 }
+.dashboard .media-image {
+	display: table-cell;
+}
